--- a/index.html
+++ b/index.html
@@ -1,24 +1,43 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>World Fire Safety</title>
+<head>
+  <meta charset="UTF-8" />
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11464426889"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+  <!-- Favicon / browser tab -->
+   <link rel="icon" type="image/png" href="/logo.png" />
+  <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
 
-      gtag('config', 'AW-11464426889');
-    </script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+  <!-- Google / Social Preview -->
+  <meta name="title" content="World Fire Safety">
+  <meta name="description" content="Official website of World Fire Safety System">
+
+  <!-- Open Graph for social / Google rich snippet -->
+  <meta property="og:title" content="World Fire Safety">
+  <meta property="og:description" content="Official website of World Fire Safety System">
+  <meta property="og:image" content="/logo.png">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.worldfiresafety.com/">
+
+
+  <title>World Fire Safety</title>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11464426889"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'AW-11464426889');
+  </script>
+
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
