--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
 
   <!-- Favicon / browser tab -->
-   <link rel="icon" type="image/png" href="/logo.png" />
+  <link rel="icon" type="image/png" href="/logo.png" />
   <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -24,6 +24,21 @@
 
   <title>World Fire Safety</title>
 
+  <!-- Google Tag Manager -->
+  <script>
+    (function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-WR6L35RT');
+  </script>
+  <!-- End Google Tag Manager -->
+
+
+  <!-- Google Ads -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11464426889"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -36,6 +51,16 @@
 </head>
 
 <body>
+
+
+  <!-- Google Tag Manager (noscript) -->
+  <noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WR6L35RT" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe>
+  </noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
+
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
